--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -10,4 +10,4 @@ jobs:
     steps:
       - uses: actions/checkout@v3
       - run: cargo test
-      - run: cargo test --features libm
+      - run: cargo test --features no_std
