--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,7 +8,8 @@ authors = ["Andrew Kane <andrew@ankane.org>"]
 edition = "2018"
 readme = "README.md"
 
-# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
+[lib]
+doctest = false
 
 [dependencies]
 libm = { version = "0.2", optional = true }
